:bug: Fix page-block white gaps

--- a/src/styles/elements/page-block.sass
+++ b/src/styles/elements/page-block.sass
@@ -37,6 +37,7 @@ $page-block-colors: (("magenta", $magenta), ("liberty", $liberty), ("deep-koamar
       bottom: -$page-block-size
       border-left: 100vw solid var(--block-color, #{$primary})
       border-bottom: $page-block-size solid transparent
+      border-top: 1px solid var(--block-color, #{$primary})
   
   &.has-slope-before
     margin-top: $page-block-size
@@ -45,3 +46,4 @@ $page-block-colors: (("magenta", $magenta), ("liberty", $liberty), ("deep-koamar
       top: - $page-block-size
       border-left: 100vw solid var(--block-color, #{$primary})
       border-top: $page-block-size solid transparent
+      border-bottom: 1px solid var(--block-color, #{$primary})
